--- a/README
+++ b/README
@@ -4,7 +4,13 @@ mp: A Music Player
 This is a simple command line music player. It will play individual music files 
 (flac, mp3, and ogg), directories that contain music files, and m3u play lists.
 
-Tested with Python version 2.7 under Linux.
+Tested with Python version 2.7 under Fedora Linux. You will need install the 
+python gstreamer module with:
+    yum install gstreamer-python
+You also need to install the necessary gstreamer plugins, which are in the RPM 
+Fusion non-free repository. Once you install the rpm-fusion free and non-free 
+repository, install the plugins with
+    yum install gstreamer-plugins-good gstreamer-plugins-ugly
 
 To get the source code:
 > git clone git@github.com:KenKundert/mp.git
