Added instructions for pausing and killing mp.

--- a/mp.1
+++ b/mp.1
@@ -30,6 +30,8 @@ Repeat songs.
 .IP "-s, --shuffle"
 Shuffle songs.
 If combined with repeat, the songs will be shuffled before each repeat.
+.PP
+Use Ctrl-Z to pause and 'fg' to continue. Use Ctrl-C when running to kill.
 .SH AUTHOR
 .nf
 Ken Kundert
