Added restart feature.

--- a/mp.1
+++ b/mp.1
@@ -32,6 +32,10 @@ Shuffle songs.
 If combined with repeat, the songs will be shuffled before each repeat.
 .PP
 Use Ctrl-Z to pause and 'fg' to continue. Use Ctrl-C when running to kill.
+.PP
+If invoked with no arguments or options \fBmp\fP will repeat the session that 
+was previously run in the same directory, skipping any songs that had already 
+been played.
 .SH AUTHOR
 .nf
 Ken Kundert
