Added ability to generate playlists.

--- a/mp.1
+++ b/mp.1
@@ -30,6 +30,8 @@ Repeat songs.
 .IP "-s, --shuffle"
 Shuffle songs.
 If combined with repeat, the songs will be shuffled before each repeat.
+.IP "-p, --playlist"
+Generate a playlist from the music specified rather than play the music.
 .PP
 Use Ctrl-Z to pause and 'fg' to continue. Use Ctrl-C when running to kill.
 .PP
