--- a/README
+++ b/README
@@ -5,8 +5,8 @@ This is a simple command line music player. It will play individual music files
 (flac, mp3, and ogg), directories that contain music files, and m3u play lists.
 
 Tested with Python version 2.7 under Fedora Linux. You will need install the 
-python gstreamer module and plugins with:
-    yum install gstreamer-python gstreamer-plugins-good
+python docutils and the gstreamer module and plugins with:
+    yum install python-docutils gstreamer-python gstreamer-plugins-good
 If you want mp3 support, you also need to install the 'ugly' plugins from the 
 RPM Fusion non-free repository.
     yum install gstreamer-plugins-ugly
