--- a/README
+++ b/README
@@ -19,10 +19,10 @@ $ git clone git@github.com:KenKundert/mp.git
 Once cloned, you can get the latest updates using:
 $ git pull
 
-To install into ~/local (modify the script to change the install directory):
+To install:
 $ ./install
 
-Be sure to add ~/local/lib/python to your PYTHONPATH.
+Be sure to add ~/.local/bin to your PATH.
 
 To read the MP manual:
 $ man mp
