--- a/README
+++ b/README
@@ -14,7 +14,7 @@ If you do not want mp3 support, edit config.py and remove 'mp3' from
 mediaFileExtensions.
 
 To get the source code:
-$ git clone git@github.com:KenKundert/mp.git
+$ git clone git://github.com/KenKundert/mp.git
 
 Once cloned, you can get the latest updates using:
 $ git pull
