Added .wav file.

--- a/README
+++ b/README
@@ -2,7 +2,8 @@ mp: A Music Player
 ==================
 
 This is a simple command line music player. It will play individual music files 
-(flac, mp3, and ogg), directories that contain music files, and m3u play lists.
+(flac, mp3, ogg, and wav), directories that contain music files, and m3u play 
+lists.
 
 Tested with Python version 2.7 under Fedora Linux. You will need install the 
 python docutils and the gstreamer module and plugins with:
