Added support for metadata.

--- a/README
+++ b/README
@@ -6,8 +6,8 @@ This is a simple command line music player. It will play individual music files
 lists.
 
 Tested with Python version 2.7 under Fedora Linux. You will need install the 
-python docutils and the gstreamer module and plugins with:
-    yum install python-docutils gstreamer-python gstreamer-plugins-good
+docutils, gstreamer, mutagen packages for python with:
+    yum install python-docutils gstreamer-python gstreamer-plugins-good mutagen
 If you want mp3 support, you also need to install the 'ugly' plugins from the 
 RPM Fusion non-free repository.
     yum install gstreamer-plugins-ugly
