--- a/install
+++ b/install
@@ -1,10 +1,12 @@
 #!/bin/bash
 # Installs mp
 #
-# Requires Python 2.7 or Python 3.3. See README.rst for dependencies.
+# Requires Python 3.6 or better. See README.rst for dependencies.
 # Be sure to add ~/.local/bin into your path.
 cmd=mp
-python=python
+python=/usr/bin/python3
+    # use the system version of python as it is too hard to install pygobject in 
+    # a manually compiled version of python.
 
 # Determine the version of python we are using
 vers=$($python -c 'import sys; print("%s.%s" % (sys.version_info[0], sys.version_info[1]))')
